Wrap fixes

--- a/res/styles/adaptive/max-width-500.css
+++ b/res/styles/adaptive/max-width-500.css
@@ -4,11 +4,15 @@
         --size-nav-height: var(--size-nav-width);
         --flag-scaffold-mode: mobile;
         --size-card-side: 28vmin;
+        --size-card-font: 3.5vmin;
     }
     @media all and (display-mode: standalone) {
         body {
             box-shadow: inset var(--color-top-border-delimeter) 0 1px 0;
         }
+    }
+    .win-modern-blocks-container>.win-modern-blocks-header {
+        margin-top: 0;
     }
     #scaffold {
         flex-direction: column-reverse;
@@ -77,7 +81,7 @@
         margin: 5px auto;
     }
     nav md-icon {
-        font-size: calc(var(--size-nav-width) * 0.45);
+        font-size: calc(var(--size-nav-width) * 0.6);
     }
     .md-toast-container {
         width: 100%;
