--- a/res/styles/sizes.css
+++ b/res/styles/sizes.css
@@ -3,4 +3,5 @@
     --size-icon-default: 24px;
     --size-text-default: 16px;
     --size-card-side: 23vmin;
+    --size-card-font: 2.8vmin;
 }
